--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,36 +1,25 @@
-cmake_minimum_required(VERSION 3.11) # FetchContent is available in 3.11+
+cmake_minimum_required(VERSION 3.20) # FetchContent is available in 3.11+
 project(example)
 
 # Generate compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Dependencies
-set(RAYLIB_VERSION 5.0)
-find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
-if (NOT raylib_FOUND) # If there's none, fetch and build raylib
-    include(FetchContent)
-    FetchContent_Declare(
-            raylib
-            DOWNLOAD_EXTRACT_TIMESTAMP OFF
-            URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
-    )
-    FetchContent_GetProperties(raylib)
-    if (NOT raylib_POPULATED) # Have we downloaded raylib yet?
-        set(FETCHCONTENT_QUIET NO)
-        FetchContent_MakeAvailable(raylib)
-        set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
-        add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
-    endif()
-endif()
+include_directories(${CMAKE_SOURCE_DIR}/include/raylib)
 
 # Our Project
+add_executable(${PROJECT_NAME} src/core_basic_window.c)
 
-add_executable(${PROJECT_NAME} core_basic_window.c)
+find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
+if(NOT raylib_FOUND)
+    # Directly link to raylib if not found by find_package
+    add_subdirectory(${CMAKE_SOURCE_DIR}/include/raylib ${CMAKE_BINARY_DIR}/raylib)
+endif()
+
 #set(raylib_VERBOSE 1)
 target_link_libraries(${PROJECT_NAME} raylib)
 
 # Web Configurations
-if (${PLATFORM} STREQUAL "Web")
+if ("${PLATFORM}" STREQUAL "Web")
     # Tell Emscripten to build an example.html file.
     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
 endif()
