--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -101,4 +101,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: example-executable-ubuntu
-        path: ${{ steps.strings.outputs.build-output-dir }}/bin/example
+        path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
