--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,7 +23,7 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         build_type: [Release]
         c_compiler: [gcc, clang, cl]
         include:
@@ -33,7 +33,7 @@ jobs:
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
-          - os: ubuntu-latest
+          - os: macos-latest
             c_compiler: clang
             cpp_compiler: clang++
         exclude:
@@ -42,6 +42,8 @@ jobs:
           - os: windows-latest
             c_compiler: clang
           - os: ubuntu-latest
+            c_compiler: cl
+          - os: macos-latest
             c_compiler: cl
 
     steps:
@@ -52,6 +54,12 @@ jobs:
     - name: Install dependencies (Ubuntu)
       if: startsWith(matrix.os, 'ubuntu')
       run: sudo apt-get update && sudo apt-get install -y xorg-dev libglu1-mesa-dev libxrandr-dev libxinerama-dev tree
+
+    - name: Install dependencies (macOS)
+      if: startsWith(matrix.os, 'macos')
+      run: |
+        brew update
+        brew install glfw tree
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -78,9 +86,15 @@ jobs:
       if: startsWith(matrix.os, 'ubuntu')
       run: tree ${{ steps.strings.outputs.build-output-dir }}
 
+    - name: Print build directory structure (MacOS)
+      if: startsWith(matrix.os, 'macos')
+      run: tree ${{ steps.strings.outputs.build-output-dir }}
+
     - name: Print build directory structure (Windows)
       if: startsWith(matrix.os, 'windows')
-      run: Get-ChildItem -Path ${{ steps.strings.outputs.build-output-dir }} -Recurse | Format-List
+      run: |
+        $treeOutput = tree /f ${{ steps.strings.outputs.build-output-dir }}
+        Write-Output "Directory structure:`n$treeOutput"
       shell: pwsh
 
     - name: Test
@@ -93,7 +107,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
-        name: example-executable
+        name: example-executable-windows
         path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example.exe
 
     - name: Archive executable (Ubuntu)
@@ -101,4 +115,11 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: example-executable-ubuntu
+        path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
+
+    - name: Archive executable (macos)
+      if: matrix.os == 'macos-latest'
+      uses: actions/upload-artifact@v4
+      with:
+        name: example-executable-macos
         path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
