Changed the workflow to archive the whole bin folder so executables aren't hardcoded

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -86,6 +86,14 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
+    - name: Set as executable (Ubuntu)
+      if: startsWith(matrix.os, 'ubuntu')
+      run: chmod +x ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
+
+    - name: Set as executable (MacOS)
+      if: startsWith(matrix.os, 'macos')
+      run: chmod +x ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
+
     - name: Print build directory structure (Ubuntu)
       if: startsWith(matrix.os, 'ubuntu')
       run: tree ${{ steps.strings.outputs.build-output-dir }}
@@ -112,18 +120,18 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: example-executable-windows
-        path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example.exe
+        path: ${{ steps.strings.outputs.build-output-dir }}/bin/
 
     - name: Archive executable (Ubuntu)
       if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4
       with:
         name: example-executable-ubuntu
-        path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
+        path: ${{ steps.strings.outputs.build-output-dir }}/bin/
 
     - name: Archive executable (macos)
       if: matrix.os == 'macos-latest'
       uses: actions/upload-artifact@v4
       with:
         name: example-executable-macos
-        path: ${{ steps.strings.outputs.build-output-dir }}/bin/Release/example
+        path: ${{ steps.strings.outputs.build-output-dir }}/bin/
